# SAS_KRSTI

./: README.md
rosaya/: CMakeLists.txt  go.mod  go.sum  package.xml
rosaya/cmd/controller_actionserver/: main.go
rosaya/launch/: display.launch  gazebo.launch  rosaya.launch  rosaya_dynamixel.launch
rosaya/meshes/: L-Link1.STL  L-Link2.STL  L-Link4.STL  L-Link5.STL  L_Link2.STL  Link1.STL  Link2.STL  Link3.STL  R-Link1.STL  R-Link2.STL  R-Link3.STL  R-Link4.STL  R-Link5.STL
rosaya/pkg/log/: log.go
rosaya/urdf/: rosaya.csv  rosaya.urdf
rosaya_controller/src/: controller_action_server.cpp
rosaya_models/: CMakeLists.txt  package.xml
rosaya_models/config/: joint_names_rosaya.yaml
rosaya_models/launch/: display.launch  gazebo.launch
rosaya_models/meshes/: L_Link1.STL  L_Link4.STL  L_Link5.STL  Link1.STL  Link2.STL  Link3.STL  R_Link1.STL  R_Link2.STL  R_Link3.STL  R_Link4.STL
rosaya_models/urdf/: rosaya.csv  rosaya.urdf
rosaya_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rosaya_moveit/config/: fake_controllers.yaml  gazebo_rosaya.urdf  gazebo_rosaya_models.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  rosaya.srdf  rosaya_models.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
rosaya_moveit/launch/: chomp_planning_pipeline.launch.xml  controller_launch.launch  demo.launch  dynamixel.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  rosaya_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
rosaya_moveit/src/: trajectory_server.cpp
